--- a/travelsite.html
+++ b/travelsite.html
@@ -72,6 +72,6 @@
 			<div>
 				<h2>Hotels & Resorts</h2>
 				<p>With so many different hotels to pick from, how can you possibly know which one is the best for you and your party? Well, it can help to know your price range.</p>
-			</div>
+			</div><br>
 	<body>
 </html>
